k8s/web-pg.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: web
  name: web
  namespace: default
spec:
  progressDeadlineSeconds: 30
  replicas: 2
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      run: web
  strategy:
    rollingUpdate:
      maxSurge: 100%
      maxUnavailable: 50%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        run: web
    spec:
      containers:
      - image: tbrock/simple-pg:latest
        imagePullPolicy: Always
        name: web
        command: ["yarn", "start-pg"]
        ports:
        - containerPort: 3000
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 10
